# handbrake-watcher

./: Dockerfile  README.md  pyproject.toml
.github/: renovate.json
handbrake_watcher/: __init__.py  absolute_tqdm.py  converter.py  fsevents.py  normalizer.py  pyinstaller.py  watcher.py  waveform.py
